tests/baselines/reference/checkSuperCallBeforeThisAccessing5.errors.txt
tests/cases/compiler/checkSuperCallBeforeThisAccessing5.ts(5,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Based'.
tests/cases/compiler/checkSuperCallBeforeThisAccessing5.ts(5,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/compiler/checkSuperCallBeforeThisAccessing5.ts (2 errors) ====
    class Based { constructor(...arg) { } }
    class Derived extends Based {
        public x: number;
        constructor() {
            super(this.x);
            ~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Based'.
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }